# ComfyUI-Aiv-Param

./: __init__.py  pyproject.toml  readMe.md
.github/workflows/: publish.yml
js/: check.js
nodes/: aivapp.py
