[project]
name = "aiv-param"
description = "Used to convert workflow node settings into AIV mini-program parameters."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/bbtaivi/ComfyUI-Aiv-Param"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Aiv-Param"
Icon = ""
